# Mario-Forever-Engine

./: CMakeLists.txt  main.cpp
Engine/: App.cpp  App.hpp  Engine.cpp  Engine.hpp  EngineObject.cpp  EngineObject.hpp  Settings.cpp  Settings.hpp  Window.cpp  Window.hpp
Engine/GUI/: Inspector.cpp  Inspector.hpp  MainMenuBar.cpp  MainMenuBar.hpp  ObjectEditorView.cpp  ObjectEditorView.hpp  ObjectHierarchy.cpp  ObjectHierarchy.hpp  ThemeManager.cpp  ThemeManager.hpp  UIWindow.hpp
Libraries/SFML/include/SFML/: Window.hpp
Libraries/SFML/include/SFML/Audio/: Listener.hpp
Libraries/SFML/include/SFML/Graphics/: RenderTarget.hpp  RenderTexture.hpp  RenderWindow.hpp  Shader.hpp  Texture.hpp  Vertex.hpp  VertexBuffer.hpp  View.hpp
Libraries/SFML/include/SFML/Window/: ContextSettings.hpp  Cursor.hpp  Event.hpp  Keyboard.hpp  VideoMode.hpp  Window.hpp  WindowBase.hpp  WindowHandle.hpp
Libraries/imgui/: imgui-SFML.cpp  imgui-SFML.h  imgui.cpp  imgui.h  imgui_demo.cpp  imgui_internal.h
